Fix for stretching

--- a/style.scss
+++ b/style.scss
@@ -180,8 +180,7 @@ img {
   margin-bottom: 0.5em;
 
   img {
-    width: 400px;
-    height: 400px;
+    max-height: 400px;
     display: inline-block;
     margin: 10px 10px;
   }
